# thin_trait_object

./: .gitignore  Cargo.toml  LICENSE.md  README.md  README.tpl  rustfmt.toml
.github/workflows/: checks_and_tests.yml
examples/: basic.rs  drop.rs  inheritance.rs  inline_vtable.rs  marker_traits.rs  size_and_align.rs
licenses/: LICENSE-MIT
src/: attr.rs  inheritance.rs  lib.rs  marker_traits.rs  options.rs  repr.rs  tests.rs  trait_object.rs  vtable.rs
